fix: 🐛 overflow body

--- a/src/Search/style.scss
+++ b/src/Search/style.scss
@@ -20,6 +20,6 @@
 }
 
 .input-dark {
-    background-color: hsla(0, 0%, 0%, 0.377) !important;
+    background-color: hsla(212, 100%, 3%, 0.38) !important; // hsla(0, 0%, 0%, 0.377) !important;
     height: 70px;
 }
